# ros2_suexi

install/: local_setup.sh  setup.sh
install/action_test/lib/action_test/: action_client  action_server
install/action_test/share/action_test/: local_setup.sh  package.sh
install/action_test/share/ament_index/resource_index/package_run_dependencies/: action_test
install/action_test/share/ament_index/resource_index/parent_prefix_path/: action_test
install/my_msgs/include/my_msgs/my_msgs/action/: test.h
install/my_msgs/include/my_msgs/my_msgs/action/detail/: test__rosidl_typesupport_fastrtps_cpp.hpp  test__struct.h  test__struct.hpp
install/my_msgs/include/my_msgs/my_msgs/msg/detail/: test__functions.h  test__rosidl_typesupport_fastrtps_cpp.hpp  test__rosidl_typesupport_introspection_c.h  test__rosidl_typesupport_introspection_cpp.hpp  test__struct.h  test__type_support.c  test__type_support.cpp
install/my_msgs/include/my_msgs/my_msgs/srv/detail/: test__functions.c  test__rosidl_typesupport_introspection_c.h  test__traits.hpp  test__type_support.cpp
install/my_msgs/local/lib/python3.10/dist-packages/my_msgs-0.0.0-py3.10.egg-info/: SOURCES.txt
install/my_msgs/local/lib/python3.10/dist-packages/my_msgs/action/: __init__.py  _test.py
install/my_msgs/local/lib/python3.10/dist-packages/my_msgs/msg/: __init__.py
install/my_msgs/share/my_msgs/: package.sh
install/my_msgs/share/my_msgs/action/: Test.idl
install/my_msgs/share/my_msgs/cmake/: export_my_msgs__rosidl_generator_cExport.cmake  export_my_msgs__rosidl_generator_cppExport.cmake  export_my_msgs__rosidl_generator_pyExport.cmake  my_msgs__rosidl_typesupport_introspection_cExport.cmake
install/my_msgs/share/my_msgs/msg/: Test.idl
install/param_test/lib/param_test/: param_node
install/param_test/share/ament_index/resource_index/parent_prefix_path/: param_test
install/param_test/share/param_test/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/param_test/share/param_test/cmake/: param_testConfig.cmake
install/test_cpp/lib/test_cpp/: server_client_node  server_node  sub_node  test_node
install/test_cpp/share/ament_index/resource_index/package_run_dependencies/: test_cpp
install/test_cpp/share/test_cpp/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/test_cpp/share/test_cpp/launch/: test_pub_launch.py
log/: latest_build
src/action_test/: CMakeLists.txt  package.xml
src/action_test/src/: action_client.cpp  action_server.cpp
src/my_msgs/: CMakeLists.txt  package.xml
src/my_msgs/msg/: Test.msg
src/my_msgs/src/: main.cpp
src/param_test/: CMakeLists.txt
src/param_test/src/: param.cpp
src/test_cpp/: CMakeLists.txt
src/test_cpp/launch/: test_pub_launch.py
src/test_cpp/msg/: Test.msg
src/test_cpp/src/: main.cpp  sub_ros2_test.cpp
src/test_cpp/src/server/: server.cpp  server_client.cpp
